Fix alignment of text blocks within rmdnote divs

--- a/inst/resources/bs4_book/bs4_book.css
+++ b/inst/resources/bs4_book/bs4_book.css
@@ -363,6 +363,11 @@ pre {
   background-image: linear-gradient(160deg,#f8f8f8 0,#f1f1f1 100%);
 }
 
+/* Align pre with text blocks in rmdnote */
+.rmdnote pre {
+    margin: 0;
+}
+
 @media (max-width: 767.98px) {
   /* Make background span full width on mobile */
   .section > .sourceCode > pre {
